--- a/wally.toml
+++ b/wally.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ansiktemuskler4489/guistruct"
-version = "0.1.2"
+version = "0.1.3"
 license = "MIT"
 author = "ansiktemuskler4489"
 registry = "https://github.com/UpliftGames/wally-index"
@@ -8,5 +8,6 @@ realm = "shared"
 repository = "https://github.com/ansiktemuskler4489/GuiStruct"
 
 description = "This packet offers wrappers around guiobjects, please refer to the repository"
+exclude = ["examples"]
 
 [dependencies]
